--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# Python Specifics
+venv
+__pycache__
+
+# Editor & OS
 .DS_Store
-*.pyc
-__pycache__/
+*.swp
+
+# Media & Static
+media/*
+!media/.gitkeep
+static/*
+!static/.gitkeep
+
+# Data
+db.sqlite3
+
+# Secrets
+service-account-key.json
+app.yaml
+.env
+.env-common
+
+
